5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1679_1099.log
== TEST (2019-04-30 22:20:31) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a "," b "," "e" c)
-- ERROR:
File "XXXX", line 4
    print("Entradas: ", a "," b "," "e" c)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:21:24) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: " + a "," + b "e" + c)
-- ERROR:
File "XXXX", line 4
    print("Entradas: " + a "," + b "e" + c)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:21:42) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a ",", b "e", c)
-- ERROR:
File "XXXX", line 4
    print("Entradas: ", a ",", b "e", c)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:22:12) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, "," b, "e", c)
-- ERROR:
File "XXXX", line 4
    print("Entradas: ", a, "," b, "e", c)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:22:16) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, "," b, "e" c)
-- ERROR:
File "XXXX", line 4
    print("Entradas: ", a, "," b, "e" c)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:22:27) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a "," b, "e" c)
-- ERROR:
File "XXXX", line 4
    print("Entradas: ", a "," b, "e" c)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:22:37) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a ",", b "e" c)
-- ERROR:
File "XXXX", line 4
    print("Entradas: ", a ",", b "e" c)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:22:54) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:35:38) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:38:03) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:38:11) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.189532
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: escaleno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:41:16) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
	
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:41:23) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
	
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:41:25) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
	
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:41:31) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
	
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:41:37) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
	
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:41:46) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
	
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")

else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.138346
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:42:48) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:42:50) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.15441
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:42:51) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if(a>=b+c or b>=a+c or c>=a+b):
	print("Tipo de triangulo: invalido")
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:43:19) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.187218
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:43:21) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a and b == c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:44:58) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.128614
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:44:58) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:45:37) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif(a == b or b==c or a==c):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.197971
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:46:37) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.215922
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:46:38) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:47:17) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:47:25) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.125305
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:47:50) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:47:59) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:48:26) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

#if(a<0 or b<0 or c<0):
#	print("Tipo de triangulo: invalido")
if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.265527
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:48:45) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.126764
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:48:46) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 22:48:55) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

if(a<0 or b<0 or c<0):
	print("Tipo de triangulo: invalido")
elif((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
	
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.135731
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:10:18) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:10:20) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.169683
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 e 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 e 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:10:21) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, "e", c)

if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 e 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:10:41) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, ",", c)

if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:10:43) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))

print("Entradas: ", a, ",", b, ",", c)

if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.139797
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:12:53) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, ",", c)

if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.159515
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:45:47) 
-- CODE:
a = float(input("Lado A: "))
b = float(input("Lado B: "))
c = float(input("Lado C: "))
print("Entradas: ", a, ",", b, ",", c)

if((a>=b+c) or (b>=a+c) or (c>=a+b)):
	print("Tipo de triangulo: invalido")
elif(a==b and b==c):
	print("Tipo de triangulo: equilatero")
elif((a == b) or (b==c) or (a==c)):
	print("Tipo de triangulo: isosceles")
elif(a!=b and b!=c and c!=a):
	print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.147182
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
